# pysomneo

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
pysomneo/: __init__.py  api.py  const.py  somneo.py  util.py
