[build-system]
requires = [
    "setuptools>=61.0",
    "requests>=2.24.0",
    "urllib3>=1.26.5"
]
build-backend = "setuptools.build_meta"

[project]
name = "pysomneo"
version = "4.1.0"
authors = [
  { name="Ruud van der Horst", email="pypi@mail.ruudvdhorst.nl" },
]
description = "A library to communicate with the API of Philips Somneo."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/theneweinstein/pysomneo"
"Bug Tracker" = "https://github.com/theneweinstein/pysomneo/issues"